# Ai-Council

./: pyproject.toml
.github/workflows/: stale-assignment-checker.yml
ai_council/core/: failure_handling.py  interfaces.py  models.py
ai_council/execution/: agent.py  mq_agent.py
ai_council/orchestration/: cost_optimizer.py  layer.py
ai_council/routing/: context_protocol.py
ai_council/synthesis/: layer.py
ai_council/tests/: test_synthesis.py
ai_council/utils/: config.py
config/: ai_council.yaml
tests/: test_context_aware_fallback.py  test_mq_integration.py
web_app/auth-backend/: package-lock.json
web_app/backend/: main.py  requirements.txt
web_app/frontend-react/: package-lock.json
web_app/frontend-react/src/hooks/: useAnalytics.js
web_app/frontend-react/src/pages/: Analytics.jsx
